--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+byteorder = "1.5.0"
 clap = { version = "4.5.3", features = ["derive"] }
 ico = "0.3.0"
 image = "0.25.0"
+riff = "2.0.0"
+thiserror = "1.0.58"
 
 [patch.crates-io]
 ico = { path = "third-party/rust-ico" }
